// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`one of shape patch generator can add an additional branch to a complex one of 1`] = `
[
  {
    "description": "expand one of for oneOf",
    "diff": {
      "description": "'oneOf' did not match schema",
      "example": [
        1,
        2,
        3,
      ],
      "instancePath": "/location/principality/coordinates",
      "key": "oneOf",
      "keyword": "oneOf",
      "kind": "UnmatchedType",
      "propertyPath": "/properties/location/properties/principality/properties/coordinates/oneOf",
    },
    "groupedOperations": [
      {
        "intent": "add new oneOf branch to oneOf",
        "operations": [
          {
            "op": "add",
            "path": "/properties/location/properties/principality/properties/coordinates/oneOf/-",
            "value": {
              "items": {
                "type": "number",
              },
              "type": "array",
            },
          },
        ],
      },
    ],
    "impact": [
      "Addition",
      "BackwardsCompatibilityUnknown",
    ],
    "shouldRegeneratePatches": false,
  },
]
`;

exports[`one of shape patch generator when new field in one of object variant of one of 1`] = `
[
  {
    "description": "add property hello",
    "diff": {
      "description": "'hello' is not documented",
      "example": "world",
      "instancePath": "/polyProp/hello",
      "key": "hello",
      "keyword": "additionalProperties",
      "kind": "AdditionalProperty",
      "parentObjectPath": "/properties/polyProp/oneOf/0/properties",
      "propertyExamplePath": "/polyProp/hello",
      "propertyPath": "/properties/polyProp/oneOf/0/properties/hello",
    },
    "groupedOperations": [
      {
        "intent": "add required [] to parent object and make hello required",
        "operations": [
          {
            "extra": "same",
            "op": "add",
            "path": "/properties/polyProp/oneOf/0/required",
            "value": [
              "hello",
            ],
          },
        ],
      },
      {
        "intent": "add property hello schema to properties",
        "operations": [
          {
            "op": "add",
            "path": "/properties/polyProp/oneOf/0/properties/hello",
            "value": {
              "type": "string",
            },
          },
        ],
      },
    ],
    "impact": [
      "Addition",
      "BackwardsCompatibilityUnknown",
    ],
    "shouldRegeneratePatches": false,
  },
]
`;

exports[`one of shape patch generator when new primitive types provided to existing one of  1`] = `
[
  {
    "description": "expand one of for oneOf",
    "diff": {
      "description": "'oneOf' did not match schema",
      "example": true,
      "instancePath": "/polyProp",
      "key": "oneOf",
      "keyword": "oneOf",
      "kind": "UnmatchedType",
      "propertyPath": "/properties/polyProp/oneOf",
    },
    "groupedOperations": [
      {
        "intent": "add new oneOf branch to oneOf",
        "operations": [
          {
            "op": "add",
            "path": "/properties/polyProp/oneOf/-",
            "value": {
              "type": "boolean",
            },
          },
        ],
      },
    ],
    "impact": [
      "Addition",
      "BackwardsCompatibilityUnknown",
    ],
    "shouldRegeneratePatches": false,
  },
]
`;

exports[`one of shape patch generator when root schema is obejct and is shown an array 1`] = `
[
  {
    "description": "make  oneOf",
    "diff": {
      "description": "'' did not match schema",
      "example": [],
      "instancePath": "",
      "key": "",
      "keyword": "type",
      "kind": "UnmatchedType",
      "propertyPath": "",
    },
    "groupedOperations": [
      {
        "intent": "replace  with a one of containing both types",
        "operations": [
          {
            "op": "remove",
            "path": "/type",
          },
          {
            "op": "remove",
            "path": "/properties",
          },
          {
            "op": "add",
            "path": "/oneOf",
            "value": [
              {
                "properties": {
                  "sup": {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              {
                "items": {},
                "type": "array",
              },
            ],
          },
        ],
      },
    ],
    "impact": [
      "Addition",
      "BackwardsCompatibilityUnknown",
    ],
    "shouldRegeneratePatches": true,
  },
  {
    "description": "change type of ",
    "diff": {
      "description": "'' did not match schema",
      "example": [],
      "instancePath": "",
      "key": "",
      "keyword": "type",
      "kind": "UnmatchedType",
      "propertyPath": "",
    },
    "groupedOperations": [
      {
        "intent": "change  type",
        "operations": [
          {
            "op": "replace",
            "path": "",
            "value": {
              "items": {},
              "type": "array",
            },
          },
        ],
      },
    ],
    "impact": [
      "BackwardsIncompatible",
    ],
    "shouldRegeneratePatches": false,
  },
]
`;
